syntax = "proto3";

// v1

option java_multiple_files = true;
package com.agregsandbox.modelb;
option java_package = "com.agregsandbox.modelb";

import "google/protobuf/timestamp.proto";


message GatewayErrorB {  
    string route = 1;
    string headers = 2;
    string body = 3;
    string exMessage = 4; 
    string exStackTrace = 5;
    google.protobuf.Timestamp timestamp = 6;
}

message MyMessageC {  
    int32 id = 1;
    string name = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message MyMessageD {  
    int32 id = 1;
    string name = 2;
    google.protobuf.Timestamp timestamp = 3;
}


